Thurs, 20 Oct 2005, Daniel R. Fisher

1. In the case of multideterminant trial wavefunctions,
   QMCDansWalkerInitialization now decides which determintant to use
   when distributing the electrons among the nuclei based on the CI
   expansion coefficients.
2. The electron nuclear and electron electron components of the
   potential energy are now recorded separately, in addition to the
   total potential energy.
3. Submitted, on behalf of Julius Su, changes that make it possible to
   use a "mean field" potential, in which the electron positions are
   averaged over several walkers.  This was written for use in DFT
   development.  To use this, use "None" for all correlation function
   types and set the flag "use_hf_potential" to 1.
4. There is a new option called "lock_trial_energy" which fixes the
   trial energy at its initial value in DMC calculations.

Fri, 23 Sep 2005, Daniel R. Fisher

1. Fixed a memory leak in QMCJastrowElectronNuclear.cpp

Wed, 21 Sep 2005, Daniel R. Fisher

1. Added the capability to calculate one electron density in
   addition to electron pair density histograms.  To calculate all
   electron densities, set the write_electron_densities flag to 1.
   This replaces the write_pair_densities flag.
2. Changed the way the histograms are normalized when they are written
   out.
3. Added the capability to use unrestricted trial functions in the SCF
   part of the wavefunction.  Unrestricted trial functions can be
   generated with Jaguar or GAMESS.  This will result in a .ckmf file
   in which the alpha and beta orbitals have different coefficients.
   The old input files can still be used. 

Wed, 14 Sep 2005, Daniel R. Fisher

1. Fixed a sign error in FixedCuspPadeCorrelationFunction.cpp

Thurs, 8 Sep 2005, Daniel R. Fisher
1. Changed the way that the distances for the pair density histograms 
   are written.  Previously, the bins were labeled by their greatest
   distance, which caused problems at small distances.  Now, they are