@@ -46,12 +46,20 @@ def generate_zip_file(version):
     os.system(command)
 
 def generate_docs(version):
+    # make doxygen documents
     command = "cd QMcBeaver-%d && doxygen | tee doxy.log"%version
     os.system(command)
+    # build doxygen API manual
     command = "cd QMcBeaver-%d/docs/latex && make ps"%version
     os.system(command)
     command = "mv QMcBeaver-%d/docs/latex/refman.ps QMcBeaver-API_manual-%d.ps"%(version,version)
     os.system(command)
+    # build user guide
+    command = "cd QMcBeaver-%d/docs && latex beaver && ps2pdf beaver"%version
+    os.system(command)
+    command = "mv QMcBeaver-%d/docs/beaver.pdf QMcBeaver-user_guide-%d.pdf"%(version,version)
+    os.system(command)
+    
 
 if __name__ == '__main__':
     import sys
